Fix spacing

--- a/src/components/pages/profile/aboutme/Introduction.aboutme.css
+++ b/src/components/pages/profile/aboutme/Introduction.aboutme.css
@@ -13,14 +13,14 @@
 
 .redirector {
     color:brown;
-    border-width: 3px;
-    border-color: orchid;
+    border-width: 0px;
+    border-color: rgb(142, 130, 220);
     margin-left: 10px;
     width: 10rem;
     height: fit-content;
     column-gap: 10%;
     margin-top: 10px;
-    margin-right: 5px;
+    margin-right: 15px;
     align-items: center;
     font-family: 'Times New Roman', Times, serif;
 }
